# bayesian-rainfall

./: .gitattributes  .gitignore  DATASET.md  README.md  demo_water_usage.py  main.py  pyproject.toml  pytest.ini
data/: noaa_historical_weather_eugene_or_2019-2024.csv
docs/: water-use-priors.txt
notebooks/: Bayesian Rainfall.ipynb  Water_Usage_Model_Demo.ipynb
notebooks/.ipynb_checkpoints/: Bayesian Rainfall-checkpoint.ipynb
src/bayesian_rainfall/: __init__.py  analysis.py  model.py  visualizations.py
src/bayesian_rainfall/water_usage/: __init__.py  model.py
tests/: test_analysis.py  test_main.py  test_water_usage.py
