[project]
name = "bayesian-rainfall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.18.0",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "pymc>=5.12.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-xdist>=3.5.0",
]

[build-system]
requires = ["uv_build<0.9"]
build-backend = "uv_build"
